added click event

--- a/index.html
+++ b/index.html
@@ -30,15 +30,87 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class = "time-block">
+      <div id= "9am" class = "time-block" >
         <div class="row">
           <div class ="col-mb-2">
               9AM
           </div>
-          <textarea class ="col-mb-8" name="" id="text-area" cols="30" rows="10"></textarea>
-          <button class ="col-mb-2" id = "save_button">Save</button>
+          <textarea class ="col-mb-8 text-area" cols="30" rows="10"></textarea>
+          <button class ="col-mb-2 save_button">Save</button>
         </div>
       </div>
+      <div id="10am" class = "time-block">
+        <div class="row">
+          <div class ="col-mb-2">
+              10AM
+          </div>
+          <textarea class ="col-mb-8 text-area" name=""cols="30" rows="10"></textarea>
+          <button class ="col-mb-2 save_button">Save</button>
+        </div>
+      </div>
+      <div id="11am" class = "time-block">
+        <div class="row">
+          <div class ="col-mb-2">
+              11AM
+          </div>
+          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
+          <button class ="col-mb-2 save_button">Save</button>
+        </div>
+      </div>
+      <div id="12am" class = "time-block">
+        <div class="row">
+          <div class ="col-mb-2">
+              12AM
+          </div>
+          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
+          <button class ="col-mb-2 save_button">Save</button>
+        </div>
+      </div>
+      <div id="1pm" class = "time-block">
+        <div class="row">
+          <div class ="col-mb-2">
+              1pm
+          </div>
+          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
+          <button class ="col-mb-2 save_button">Save</button>
+        </div>
+      </div>
+      <div id="2pm" class = "time-block">
+        <div class="row">
+          <div class ="col-mb-2">
+              2pm
+          </div>
+          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
+          <button class ="col-mb-2 save_button">Save</button>
+        </div>
+      </div>
+      <div id="3pm" class = "time-block">
+        <div class="row">
+          <div class ="col-mb-2">
+              3pm
+          </div>
+          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
+          <button class ="col-mb-2 save_button">Save</button>
+        </div>
+      </div>
+      <div id="4pm" class = "time-block">
+        <div class="row">
+          <div class ="col-mb-2">
+              4pm
+          </div>
+          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
+          <button class ="col-mb-2 save_button">Save</button>
+        </div>
+      </div>
+      <div id="5pm" class = "time-block">
+        <div class="row">
+          <div class ="col-mb-2">
+              5pm
+            </div>
+            <textarea class ="col-mb-8 text-area" name=""  cols="30" rows="10"></textarea>
+            <button class ="col-mb-2 save_button">Save</button>
+          </div>
+        </div>
 
     </div>
 
