--- a/index.html
+++ b/index.html
@@ -32,83 +32,83 @@
       <!-- Timeblocks go here -->
       <div id= "9am" class = "time-block" >
         <div class="row">
-          <div class ="col-mb-2">
+          <div class ="col-md-2">
               9AM
           </div>
-          <textarea class ="col-mb-8 text-area" cols="30" rows="10"></textarea>
-          <button class ="col-mb-2 save_button">Save</button>
+          <textarea class ="col-md-8 text-area"></textarea>
+          <button class ="col-2 saveBtn">Save</button>
         </div>
       </div>
       <div id="10am" class = "time-block">
         <div class="row">
-          <div class ="col-mb-2">
+          <div class ="col-md-2">
               10AM
           </div>
-          <textarea class ="col-mb-8 text-area" name=""cols="30" rows="10"></textarea>
-          <button class ="col-mb-2 save_button">Save</button>
+          <textarea class ="col-md-8 text-area"></textarea>
+          <button class ="col-md-2 saveBtn">Save</button>
         </div>
       </div>
       <div id="11am" class = "time-block">
         <div class="row">
-          <div class ="col-mb-2">
+          <div class ="col-md-2">
               11AM
           </div>
-          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
-          <button class ="col-mb-2 save_button">Save</button>
+          <textarea class ="col-md-8 text-area"></textarea>
+          <button class ="col-md-2 saveBtn">Save</button>
         </div>
       </div>
       <div id="12am" class = "time-block">
         <div class="row">
-          <div class ="col-mb-2">
+          <div class ="col-md-2">
               12AM
           </div>
-          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
-          <button class ="col-mb-2 save_button">Save</button>
+          <textarea class ="col-md-8 text-area"></textarea>
+          <button class ="col-md-2 saveBtn">Save</button>
         </div>
       </div>
       <div id="1pm" class = "time-block">
         <div class="row">
-          <div class ="col-mb-2">
-              1pm
+          <div class ="col-md-2">
+              1PM
           </div>
-          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
-          <button class ="col-mb-2 save_button">Save</button>
+          <textarea class ="col-md-8 text-area"></textarea>
+          <button class ="col-md-2 saveBtn">Save</button>
         </div>
       </div>
       <div id="2pm" class = "time-block">
         <div class="row">
-          <div class ="col-mb-2">
-              2pm
+          <div class ="col-md-2">
+              2PM
           </div>
-          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
-          <button class ="col-mb-2 save_button">Save</button>
+          <textarea class ="col-md-8 text-area"></textarea>
+          <button class ="col-md-2 saveBtn">Save</button>
         </div>
       </div>
       <div id="3pm" class = "time-block">
         <div class="row">
-          <div class ="col-mb-2">
-              3pm
+          <div class ="col-md-2">
+              3PM
           </div>
-          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
-          <button class ="col-mb-2 save_button">Save</button>
+          <textarea class ="col-md-8 text-area"></textarea>
+          <button class ="col-md-2 saveBtn">Save</button>
         </div>
       </div>
       <div id="4pm" class = "time-block">
         <div class="row">
-          <div class ="col-mb-2">
-              4pm
+          <div class ="col-md-2">
+              4PM
           </div>
-          <textarea class ="col-mb-8 text-area" name="" cols="30" rows="10"></textarea>
-          <button class ="col-mb-2 save_button">Save</button>
+          <textarea class ="col-md-8 text-area"></textarea>
+          <button class ="col-md-2 saveBtn">Save</button>
         </div>
       </div>
       <div id="5pm" class = "time-block">
         <div class="row">
-          <div class ="col-mb-2">
-              5pm
+          <div class ="col-md-2">
+              5PM
             </div>
-            <textarea class ="col-mb-8 text-area" name=""  cols="30" rows="10"></textarea>
-            <button class ="col-mb-2 save_button">Save</button>
+            <textarea class ="col-md-8 text-area"></textarea>
+            <button class ="col-md-2 saveBtn">Save</button>
           </div>
         </div>
 
